chore: 입찰/결제 로직을 2차 완료 시점으로 롤백 롤백 기준: a2ceb5e (fix: change getEmail to getName in BidServiceTest) 목적: - 입찰 동시성 제어를 단계적으로 학습하기 위한 기준점 설정